Partial fix of crappy appearance on mobile. Will do more soon.

--- a/assets/responsive.css
+++ b/assets/responsive.css
@@ -16,20 +16,49 @@
         background-image: url(img/water.jpg);
         background-repeat: no-repeat;
         background-size: cover;
-        height: 960px; /* Typical iPhone height. This number is changed by JS dynamically */
         width: 100%;
-    }
-
-    #container {
-        top: 300px;
-    }
-
-    h1 {
-        font-size: 35px;
+        height: 100%;
+        position: static;
     }
 
     video {
         display: none;
+    }
+
+    #video-overlay {
+        position: relative;
+    }
+
+    #container {
+        position: static;
+    }
+
+    #sub-header {
+        position: static;
+    }
+
+    .pane, .pane-center {
+        margin: 0 auto;
+        margin-top: 0;
+        position: static;
+    }
+
+    #sub-container {
+        margin: 0 auto;
+        position: relative;
+    }
+
+    h1 {
+        font-size: 50px;
+    }
+
+    h3 {
+        font-size: 18px;
+        font-weight: 100;
+        line-height: 24px;
+        margin: auto 5%;
+        position: absolute;
+        top: 50%;
     }
 
 	#photo-gallery {
